// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Email template snapshots Should return the expected email for CREATE_INTEGRATION_APPLIED - no browser login 1`] = `"[DEV] Pathfinder SSO request approved (email 2 of 2)"`;

exports[`Email template snapshots Should return the expected email for CREATE_INTEGRATION_APPLIED - no browser login 2`] = `
"<h3>Hello Pathfinder SSO friend,</h3>
<p>
  Your Pathfinder SSO request ID 1 is successfully approved. </p>
<p>Below is a summary of your integration request details:</p>
<strong>Project name: </strong>test<br />
<strong>Environments: </strong>Development<br />
<strong>Accountable person(s): </strong>Test User<br />
<strong>Submitted by: </strong>SSO Admin<br />
   <p>
  Please <a href="http://localhost:3000/my-dashboard/integrations" title="Log in" target="_blank" rel="noreferrer">Log in</a>
  to your dashboard to access JSON Client Installation File. If you are not the requester, this email serves only to
  notify you of the request status.
</p>
 <p>
  Please join the
  <a
    href="https://digital.gov.bc.ca/sso-notifications/"
    title="SSO Updates Mailing list"
    target="_blank"
    rel="noreferrer"
    >SSO Updates Mailing list</a
  >
  within the DevOps Platform Services Communications to receive important updates on the service and any outages.
</p>
  <p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>

"
`;

exports[`Email template snapshots Should return the expected email for CREATE_INTEGRATION_APPLIED - w/ approved BC Services Card prod 1`] = `"[DEV] Pathfinder SSO request approved (email 2 of 2)"`;

exports[`Email template snapshots Should return the expected email for CREATE_INTEGRATION_APPLIED - w/ approved BC Services Card prod 2`] = `
"<h3>Hello Pathfinder SSO friend,</h3>
<p>
  Your Pathfinder SSO request ID 1 is successfully approved. </p>
<p>Below is a summary of your integration request details:</p>
<strong>Project name: </strong>test<br />
<strong>Primary End Users: </strong>None Selected<br />
<strong>Identity Providers: </strong>BC Services Card<br />

<strong>Privacy Zone:</strong> zone <br />
<strong>Environments: </strong>Development<br />
<strong>Accountable person(s): </strong>Test User<br />
<strong>Submitted by: </strong>SSO Admin<br />
<strong>URIs:</strong>
<ul>
  <li>
    Development:
    <ul>
      <li>https://b</li>
    </ul>
  </li>
</ul>
   <p>
  Please <a href="http://localhost:3000/my-dashboard/integrations" title="Log in" target="_blank" rel="noreferrer">Log in</a>
  to your dashboard to access JSON Client Installation File. If you are not the requester, this email serves only to
  notify you of the request status.
</p>
 <p>
  Please join the
  <a
    href="https://digital.gov.bc.ca/sso-notifications/"
    title="SSO Updates Mailing list"
    target="_blank"
    rel="noreferrer"
    >SSO Updates Mailing list</a
  >
  within the DevOps Platform Services Communications to receive important updates on the service and any outages.
</p>
  <p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>

"
`;

exports[`Email template snapshots Should return the expected email for CREATE_INTEGRATION_APPLIED - w/ unapproved BC Services Card prod 1`] = `"[DEV] Pathfinder SSO request approved (email 2 of 2)"`;

exports[`Email template snapshots Should return the expected email for CREATE_INTEGRATION_APPLIED - w/ unapproved BC Services Card prod 2`] = `
"<h3>Hello Pathfinder SSO friend,</h3>
<p>
  Your Pathfinder SSO request ID 1 is successfully approved. </p>
<p>Below is a summary of your integration request details:</p>
<strong>Project name: </strong>test<br />
<strong>Primary End Users: </strong>None Selected<br />
<strong>Identity Providers: </strong>BC Services Card<br />

<strong>Privacy Zone:</strong> zone <br />
<strong>Environments: </strong>Development<br />
<strong>Accountable person(s): </strong>Test User<br />
<strong>Submitted by: </strong>SSO Admin<br />
<strong>URIs:</strong>
<ul>
  <li>
    Development:
    <ul>
      <li>https://b</li>
    </ul>
  </li>
</ul>
   <strong>Next Steps for your integration with BC Services Card:</strong>
<p>
  As you've requested an integration with BC Services Card, any production integration request requires you to work with
  the Identity and Information Management (IDIM) team.
</p>
<ol>
  <li>
    <strong
      >On a best effort basis, the BC Services Card team will endeavour to reach out to you within 2-3 business days to
      schedule an on-boarding meeting.</strong
    >
  </li>
  <li>
    <strong>Please have answers to the questions below, before your meeting with the IDIM team.</strong>
    <ul>
      <li>What is your estimated volume of initial users?</li>
      <li>Do you anticipate your volume of users will grow over the next three years?</li>
      <li>When do you need access to the production environment by?</li>
      <li>When will your end users need access to the production environment?</li>
    </ul>
    <div style="display: none">&nbsp;</div>
  </li>
</ol>
  <p>
  Please <a href="http://localhost:3000/my-dashboard/integrations" title="Log in" target="_blank" rel="noreferrer">Log in</a>
  to your dashboard to access JSON Client Installation File. If you are not the requester, this email serves only to
  notify you of the request status.
</p>
 <p>
  Please join the
  <a
    href="https://digital.gov.bc.ca/sso-notifications/"
    title="SSO Updates Mailing list"
    target="_blank"
    rel="noreferrer"
    >SSO Updates Mailing list</a
  >
  within the DevOps Platform Services Communications to receive important updates on the service and any outages.
</p>
  <p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>

"
`;

exports[`Email template snapshots Should return the expected email for CREATE_INTEGRATION_APPLIED - w/ unapproved BCeID & GitHub prod 1`] = `"[DEV] Pathfinder SSO request approved (email 2 of 2)"`;

exports[`Email template snapshots Should return the expected email for CREATE_INTEGRATION_APPLIED - w/ unapproved BCeID & GitHub prod 2`] = `
"<h3>Hello Pathfinder SSO friend,</h3>
<p>
  Your Pathfinder SSO request ID 1 is successfully approved. </p>
<p>Below is a summary of your integration request details:</p>
<strong>Project name: </strong>test<br />
<strong>Primary End Users: </strong>None Selected<br />
<strong>Identity Providers: </strong>IDIR - MFA<br />
<strong>Environments: </strong>Development<br />
<strong>Accountable person(s): </strong>Test User<br />
<strong>Submitted by: </strong>SSO Admin<br />
<strong>URIs:</strong>
<ul>
  <li>
    Development:
    <ul>
      <li>https://b</li>
    </ul>
  </li>
</ul>
  <strong>Next Steps for your integration with BCeID:</strong>
<p>
  As you've requested an integration with BCeID, any production integration request requires you to work with the
  Identity and Information Management (IDIM) team.
</p>
<ol>
  <li>
    <strong
      >On a best effort basis, the BCeID team will endeavour to reach out to you within 2-3 business days to schedule an
      on-boarding meeting.</strong
    >
  </li>
  <li>
    <strong>Please have answers to the questions below, before your meeting with the IDIM team.</strong>
    <ul>
      <li>What is your estimated volume of initial users?</li>
      <li>Do you anticipate your volume of users will grow over the next three years?</li>
      <li>When do you need access to the production environment by?</li>
      <li>When will your end users need access to the production environment?</li>
    </ul>
    <div style="display: none">&nbsp;</div>
  </li>
</ol>
   <p><strong>*GitHub production integration is not approved and not ready to use yet</strong></p>
  <p>
  Please <a href="http://localhost:3000/my-dashboard/integrations" title="Log in" target="_blank" rel="noreferrer">Log in</a>
  to your dashboard to access JSON Client Installation File. If you are not the requester, this email serves only to
  notify you of the request status.
</p>
 <p>
  Please join the
  <a
    href="https://digital.gov.bc.ca/sso-notifications/"
    title="SSO Updates Mailing list"
    target="_blank"
    rel="noreferrer"
    >SSO Updates Mailing list</a
  >
  within the DevOps Platform Services Communications to receive important updates on the service and any outages.
</p>
  <p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>

"
`;

exports[`Email template snapshots Should return the expected email for CREATE_INTEGRATION_APPLIED - w/ unapproved BCeID prod 1`] = `"[DEV] Pathfinder SSO request approved (email 2 of 2)"`;

exports[`Email template snapshots Should return the expected email for CREATE_INTEGRATION_APPLIED - w/ unapproved BCeID prod 2`] = `
"<h3>Hello Pathfinder SSO friend,</h3>
<p>
  Your Pathfinder SSO request ID 1 is successfully approved. </p>
<p>Below is a summary of your integration request details:</p>
<strong>Project name: </strong>test<br />
<strong>Primary End Users: </strong>None Selected<br />
<strong>Identity Providers: </strong>IDIR - MFA<br />
<strong>Environments: </strong>Development<br />
<strong>Accountable person(s): </strong>Test User<br />
<strong>Submitted by: </strong>SSO Admin<br />
<strong>URIs:</strong>
<ul>
  <li>
    Development:
    <ul>
      <li>https://b</li>
    </ul>
  </li>
</ul>
  <strong>Next Steps for your integration with BCeID:</strong>
<p>
  As you've requested an integration with BCeID, any production integration request requires you to work with the
  Identity and Information Management (IDIM) team.
</p>
<ol>
  <li>
    <strong
      >On a best effort basis, the BCeID team will endeavour to reach out to you within 2-3 business days to schedule an
      on-boarding meeting.</strong
    >
  </li>
  <li>
    <strong>Please have answers to the questions below, before your meeting with the IDIM team.</strong>
    <ul>
      <li>What is your estimated volume of initial users?</li>
      <li>Do you anticipate your volume of users will grow over the next three years?</li>
      <li>When do you need access to the production environment by?</li>
      <li>When will your end users need access to the production environment?</li>
    </ul>
    <div style="display: none">&nbsp;</div>
  </li>
</ol>
   <p>
  Please <a href="http://localhost:3000/my-dashboard/integrations" title="Log in" target="_blank" rel="noreferrer">Log in</a>
  to your dashboard to access JSON Client Installation File. If you are not the requester, this email serves only to
  notify you of the request status.
</p>
 <p>
  Please join the
  <a
    href="https://digital.gov.bc.ca/sso-notifications/"
    title="SSO Updates Mailing list"
    target="_blank"
    rel="noreferrer"
    >SSO Updates Mailing list</a
  >
  within the DevOps Platform Services Communications to receive important updates on the service and any outages.
</p>
  <p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>

"
`;

exports[`Email template snapshots Should return the expected email for CREATE_INTEGRATION_APPLIED - w/ unapproved GitHub prod 1`] = `"[DEV] Pathfinder SSO request approved (email 2 of 2)"`;

exports[`Email template snapshots Should return the expected email for CREATE_INTEGRATION_APPLIED - w/ unapproved GitHub prod 2`] = `
"<h3>Hello Pathfinder SSO friend,</h3>
<p>
  Your Pathfinder SSO request ID 1 is successfully approved. </p>
<p>Below is a summary of your integration request details:</p>
<strong>Project name: </strong>test<br />
<strong>Primary End Users: </strong>None Selected<br />
<strong>Identity Providers: </strong>IDIR - MFA<br />
<strong>Environments: </strong>Development<br />
<strong>Accountable person(s): </strong>Test User<br />
<strong>Submitted by: </strong>SSO Admin<br />
<strong>URIs:</strong>
<ul>
  <li>
    Development:
    <ul>
      <li>https://b</li>
    </ul>
  </li>
</ul>
   <p><strong>*GitHub production integration is not approved and not ready to use yet</strong></p>
  <p>
  Please <a href="http://localhost:3000/my-dashboard/integrations" title="Log in" target="_blank" rel="noreferrer">Log in</a>
  to your dashboard to access JSON Client Installation File. If you are not the requester, this email serves only to
  notify you of the request status.
</p>
 <p>
  Please join the
  <a
    href="https://digital.gov.bc.ca/sso-notifications/"
    title="SSO Updates Mailing list"
    target="_blank"
    rel="noreferrer"
    >SSO Updates Mailing list</a
  >
  within the DevOps Platform Services Communications to receive important updates on the service and any outages.
</p>
  <p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>

"
`;

exports[`Email template snapshots Should return the expected email for CREATE_INTEGRATION_APPLIED - w/ unapproved Social prod 1`] = `"[DEV] Pathfinder SSO request approved (email 2 of 2)"`;

exports[`Email template snapshots Should return the expected email for CREATE_INTEGRATION_APPLIED - w/ unapproved Social prod 2`] = `
"<h3>Hello Pathfinder SSO friend,</h3>
<p>
  Your Pathfinder SSO request ID 1 is successfully approved. </p>
<p>Below is a summary of your integration request details:</p>
<strong>Project name: </strong>test<br />
<strong>Primary End Users: </strong>None Selected<br />
<strong>Identity Providers: </strong>IDIR - MFA<br />
<strong>Environments: </strong>Development<br />
<strong>Accountable person(s): </strong>Test User<br />
<strong>Submitted by: </strong>SSO Admin<br />
<strong>URIs:</strong>
<ul>
  <li>
    Development:
    <ul>
      <li>https://b</li>
    </ul>
  </li>
</ul>
   <p><strong>*Social production integration is not approved and not ready to use yet</strong></p>
  <p>
  Please <a href="http://localhost:3000/my-dashboard/integrations" title="Log in" target="_blank" rel="noreferrer">Log in</a>
  to your dashboard to access JSON Client Installation File. If you are not the requester, this email serves only to
  notify you of the request status.
</p>
 <p>
  Please join the
  <a
    href="https://digital.gov.bc.ca/sso-notifications/"
    title="SSO Updates Mailing list"
    target="_blank"
    rel="noreferrer"
    >SSO Updates Mailing list</a
  >
  within the DevOps Platform Services Communications to receive important updates on the service and any outages.
</p>
  <p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>

"
`;

exports[`Email template snapshots Should return the expected email for CREATE_INTEGRATION_APPLIED 1`] = `"[DEV] Pathfinder SSO request approved (email 2 of 2)"`;

exports[`Email template snapshots Should return the expected email for CREATE_INTEGRATION_APPLIED 2`] = `
"<h3>Hello Pathfinder SSO friend,</h3>
<p>
  Your Pathfinder SSO request ID 1 is successfully approved. </p>
<p>Below is a summary of your integration request details:</p>
<strong>Project name: </strong>test<br />
<strong>Primary End Users: </strong>None Selected<br />
<strong>Identity Providers: </strong>IDIR - MFA<br />
<strong>Environments: </strong>Development<br />
<strong>Accountable person(s): </strong>Test User<br />
<strong>Submitted by: </strong>SSO Admin<br />
<strong>URIs:</strong>
<ul>
  <li>
    Development:
    <ul>
      <li>https://b</li>
    </ul>
  </li>
</ul>
   <p>
  Please <a href="http://localhost:3000/my-dashboard/integrations" title="Log in" target="_blank" rel="noreferrer">Log in</a>
  to your dashboard to access JSON Client Installation File. If you are not the requester, this email serves only to
  notify you of the request status.
</p>
 <p>
  Please join the
  <a
    href="https://digital.gov.bc.ca/sso-notifications/"
    title="SSO Updates Mailing list"
    target="_blank"
    rel="noreferrer"
    >SSO Updates Mailing list</a
  >
  within the DevOps Platform Services Communications to receive important updates on the service and any outages.
</p>
  <p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>

"
`;

exports[`Email template snapshots Should return the expected email for CREATE_INTEGRATION_SUBMITTED - no browser login 1`] = `"[DEV] Pathfinder SSO request submitted & additional important information (email 1 of 2)"`;

exports[`Email template snapshots Should return the expected email for CREATE_INTEGRATION_SUBMITTED - no browser login 2`] = `
"<h3>Hello Pathfinder SSO friend,</h3>
<p>Your Pathfinder SSO request ID 1 is successfully submitted.</p>
<p>Below is a summary of your integration request details:</p>
<strong>Project name: </strong>test<br />
<strong>Environments: </strong>Development, Test, Production<br />
<strong>Accountable person(s): </strong>Test User<br />
<strong>Submitted by: </strong>SSO Admin<br />
 <p>
  <strong>The expected processing time is 5 minutes</strong><br />
  Once the request is approved, you will receive another email that your JSON Client Installation is ready. If you are
  not the requester, this email serves only to notify you of the request status.
</p>
  <table border="0" width="100%" cellpadding="0" cellspacing="0">
  <tr>
    <td
      style="background: none; border-bottom: 1px solid #d7dfe3; height: 1px; width: 100%; margin: 0px 0px 0px 0px"
    ></td>
  </tr>
</table>
<br />
 <strong>Next Steps for your integration with BCeID:</strong>
<p>
  As you've requested an integration with BCeID, any production integration request requires you to work with the
  Identity and Information Management (IDIM) team.
</p>
<ol>
  <li>
    <strong
      >On a best effort basis, the BCeID team will endeavour to reach out to you within 2-3 business days to schedule an
      on-boarding meeting.</strong
    >
  </li>
  <li>
    <strong>Please have answers to the questions below, before your meeting with the IDIM team.</strong>
    <ul>
      <li>What is your estimated volume of initial users?</li>
      <li>Do you anticipate your volume of users will grow over the next three years?</li>
      <li>When do you need access to the production environment by?</li>
      <li>When will your end users need access to the production environment?</li>
    </ul>
    <div style="display: none">&nbsp;</div>
  </li>
</ol>

  <table border="0" width="100%" cellpadding="0" cellspacing="0">
  <tr>
    <td
      style="background: none; border-bottom: 1px solid #d7dfe3; height: 1px; width: 100%; margin: 0px 0px 0px 0px"
    ></td>
  </tr>
</table>
<br />
 <strong>Next Steps for your integration with GitHub:</strong>
<p>
  As you've requested an integration with GitHub, any production integration request requires you to obtain an exemption
  to the IM/IT standards.
  <a
    href="https://www2.gov.bc.ca/gov/content/governments/services-for-government/policies-procedures/im-it-standards/im-it-standards-faqs"
    title="IM/IT Standards Frequently Asked Questions"
    target="_blank"
    rel="noreferrer"
    >IM/IT Standards Frequently Asked Questions</a
  >
</p>
<ol>
  <li>
    Please proceed to complete this form:
    <a
      href="https://www2.gov.bc.ca/gov/content/governments/services-for-government/policies-procedures/im-it-standards/exemptions"
      title="IIM/IT Standards Exemptions"
      target="_blank"
      rel="noreferrer"
      >IIM/IT Standards Exemptions</a
    >
  </li>
  <li>
    Once the exemption has been granted, please email us with a copy of it and we will happily set you production
    integration with GitHub
  </li>
</ol>
<div style="display: none">&nbsp;</div>
   <p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>

"
`;

exports[`Email template snapshots Should return the expected email for CREATE_INTEGRATION_SUBMITTED 1`] = `"[DEV] Pathfinder SSO request submitted & additional important information (email 1 of 2)"`;

exports[`Email template snapshots Should return the expected email for CREATE_INTEGRATION_SUBMITTED 2`] = `
"<h3>Hello Pathfinder SSO friend,</h3>
<p>Your Pathfinder SSO request ID 1 is successfully submitted.</p>
<p>Below is a summary of your integration request details:</p>
<strong>Project name: </strong>test<br />
<strong>Primary End Users: </strong>None Selected<br />
<strong>Identity Providers: </strong>IDIR - MFA<br />
<strong>Environments: </strong>Development, Test<br />
<strong>Accountable person(s): </strong>Test User<br />
<strong>Submitted by: </strong>SSO Admin<br />
<strong>URIs:</strong>
<ul>
  <li>
    Development:
    <ul>
      <li>https://b</li>
    </ul>
  </li>
  <li>
    Test:
    <ul>
      <li>https://test</li>
    </ul>
  </li>
</ul>
 <p>
  <strong>The expected processing time is 5 minutes</strong><br />
  Once the request is approved, you will receive another email that your JSON Client Installation is ready. If you are
  not the requester, this email serves only to notify you of the request status.
</p>
    <p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>

"
`;

exports[`Email template snapshots Should return the expected email for CREATE_INTEGRATION_SUBMITTED w/ BC Services Card 1`] = `"[DEV] Pathfinder SSO request submitted & additional important information (email 1 of 2)"`;

exports[`Email template snapshots Should return the expected email for CREATE_INTEGRATION_SUBMITTED w/ BC Services Card 2`] = `
"<h3>Hello Pathfinder SSO friend,</h3>
<p>Your Pathfinder SSO request ID 1 is successfully submitted.</p>
<p>Below is a summary of your integration request details:</p>
<strong>Project name: </strong>test<br />
<strong>Primary End Users: </strong>None Selected<br />
<strong>Identity Providers: </strong>BC Services Card<br />

<strong>Privacy Zone:</strong> zone <br />
<strong>Environments: </strong>Development, Test, Production<br />
<strong>Accountable person(s): </strong>Test User<br />
<strong>Submitted by: </strong>SSO Admin<br />
<strong>URIs:</strong>
<ul>
  <li>
    Development:
    <ul>
      <li>https://b</li>
    </ul>
  </li>
  <li>
    Test:
    <ul>
      <li>https://test</li>
    </ul>
  </li>
  <li>
    Production:
    <ul>
      <li>https://a</li>
    </ul>
  </li>
</ul>
 <p>
  <strong>The expected processing time is 5 minutes</strong><br />
  Once the request is approved, you will receive another email that your JSON Client Installation is ready. If you are
  not the requester, this email serves only to notify you of the request status.
</p>
   <table border="0" width="100%" cellpadding="0" cellspacing="0">
  <tr>
    <td
      style="background: none; border-bottom: 1px solid #d7dfe3; height: 1px; width: 100%; margin: 0px 0px 0px 0px"
    ></td>
  </tr>
</table>
<br />
 <strong>Next Steps for your integration with BC Services Card:</strong>
<p>
  As you've requested an integration with BC Services Card, any production integration request requires you to work with
  the Identity and Information Management (IDIM) team.
</p>
<ol>
  <li>
    <strong
      >On a best effort basis, the BC Services Card team will endeavour to reach out to you within 2-3 business days to
      schedule an on-boarding meeting.</strong
    >
  </li>
  <li>
    <strong>Please have answers to the questions below, before your meeting with the IDIM team.</strong>
    <ul>
      <li>What is your estimated volume of initial users?</li>
      <li>Do you anticipate your volume of users will grow over the next three years?</li>
      <li>When do you need access to the production environment by?</li>
      <li>When will your end users need access to the production environment?</li>
    </ul>
    <div style="display: none">&nbsp;</div>
  </li>
</ol>
   <p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>

"
`;

exports[`Email template snapshots Should return the expected email for CREATE_INTEGRATION_SUBMITTED w/ BCeID & GitHub 1`] = `"[DEV] Pathfinder SSO request submitted & additional important information (email 1 of 2)"`;

exports[`Email template snapshots Should return the expected email for CREATE_INTEGRATION_SUBMITTED w/ BCeID & GitHub 2`] = `
"<h3>Hello Pathfinder SSO friend,</h3>
<p>Your Pathfinder SSO request ID 1 is successfully submitted.</p>
<p>Below is a summary of your integration request details:</p>
<strong>Project name: </strong>test<br />
<strong>Primary End Users: </strong>None Selected<br />
<strong>Identity Providers: </strong>IDIR - MFA<br />
<strong>Environments: </strong>Development, Test, Production<br />
<strong>Accountable person(s): </strong>Test User<br />
<strong>Submitted by: </strong>SSO Admin<br />
<strong>URIs:</strong>
<ul>
  <li>
    Development:
    <ul>
      <li>https://b</li>
    </ul>
  </li>
  <li>
    Test:
    <ul>
      <li>https://test</li>
    </ul>
  </li>
  <li>
    Production:
    <ul>
      <li>https://a</li>
    </ul>
  </li>
</ul>
 <p>
  <strong>The expected processing time is 5 minutes</strong><br />
  Once the request is approved, you will receive another email that your JSON Client Installation is ready. If you are
  not the requester, this email serves only to notify you of the request status.
</p>
  <table border="0" width="100%" cellpadding="0" cellspacing="0">
  <tr>
    <td
      style="background: none; border-bottom: 1px solid #d7dfe3; height: 1px; width: 100%; margin: 0px 0px 0px 0px"
    ></td>
  </tr>
</table>
<br />
 <strong>Next Steps for your integration with BCeID:</strong>
<p>
  As you've requested an integration with BCeID, any production integration request requires you to work with the
  Identity and Information Management (IDIM) team.
</p>
<ol>
  <li>
    <strong
      >On a best effort basis, the BCeID team will endeavour to reach out to you within 2-3 business days to schedule an
      on-boarding meeting.</strong
    >
  </li>
  <li>
    <strong>Please have answers to the questions below, before your meeting with the IDIM team.</strong>
    <ul>
      <li>What is your estimated volume of initial users?</li>
      <li>Do you anticipate your volume of users will grow over the next three years?</li>
      <li>When do you need access to the production environment by?</li>
      <li>When will your end users need access to the production environment?</li>
    </ul>
    <div style="display: none">&nbsp;</div>
  </li>
</ol>

  <table border="0" width="100%" cellpadding="0" cellspacing="0">
  <tr>
    <td
      style="background: none; border-bottom: 1px solid #d7dfe3; height: 1px; width: 100%; margin: 0px 0px 0px 0px"
    ></td>
  </tr>
</table>
<br />
 <strong>Next Steps for your integration with GitHub:</strong>
<p>
  As you've requested an integration with GitHub, any production integration request requires you to obtain an exemption
  to the IM/IT standards.
  <a
    href="https://www2.gov.bc.ca/gov/content/governments/services-for-government/policies-procedures/im-it-standards/im-it-standards-faqs"
    title="IM/IT Standards Frequently Asked Questions"
    target="_blank"
    rel="noreferrer"
    >IM/IT Standards Frequently Asked Questions</a
  >
</p>
<ol>
  <li>
    Please proceed to complete this form:
    <a
      href="https://www2.gov.bc.ca/gov/content/governments/services-for-government/policies-procedures/im-it-standards/exemptions"
      title="IIM/IT Standards Exemptions"
      target="_blank"
      rel="noreferrer"
      >IIM/IT Standards Exemptions</a
    >
  </li>
  <li>
    Once the exemption has been granted, please email us with a copy of it and we will happily set you production
    integration with GitHub
  </li>
</ol>
<div style="display: none">&nbsp;</div>
   <p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>

"
`;

exports[`Email template snapshots Should return the expected email for CREATE_INTEGRATION_SUBMITTED w/ BCeID 1`] = `"[DEV] Pathfinder SSO request submitted & additional important information (email 1 of 2)"`;

exports[`Email template snapshots Should return the expected email for CREATE_INTEGRATION_SUBMITTED w/ BCeID 2`] = `
"<h3>Hello Pathfinder SSO friend,</h3>
<p>Your Pathfinder SSO request ID 1 is successfully submitted.</p>
<p>Below is a summary of your integration request details:</p>
<strong>Project name: </strong>test<br />
<strong>Primary End Users: </strong>None Selected<br />
<strong>Identity Providers: </strong>IDIR - MFA<br />
<strong>Environments: </strong>Development, Test, Production<br />
<strong>Accountable person(s): </strong>Test User<br />
<strong>Submitted by: </strong>SSO Admin<br />
<strong>URIs:</strong>
<ul>
  <li>
    Development:
    <ul>
      <li>https://b</li>
    </ul>
  </li>
  <li>
    Test:
    <ul>
      <li>https://test</li>
    </ul>
  </li>
  <li>
    Production:
    <ul>
      <li>https://a</li>
    </ul>
  </li>
</ul>
 <p>
  <strong>The expected processing time is 5 minutes</strong><br />
  Once the request is approved, you will receive another email that your JSON Client Installation is ready. If you are
  not the requester, this email serves only to notify you of the request status.
</p>
  <table border="0" width="100%" cellpadding="0" cellspacing="0">
  <tr>
    <td
      style="background: none; border-bottom: 1px solid #d7dfe3; height: 1px; width: 100%; margin: 0px 0px 0px 0px"
    ></td>
  </tr>
</table>
<br />
 <strong>Next Steps for your integration with BCeID:</strong>
<p>
  As you've requested an integration with BCeID, any production integration request requires you to work with the
  Identity and Information Management (IDIM) team.
</p>
<ol>
  <li>
    <strong
      >On a best effort basis, the BCeID team will endeavour to reach out to you within 2-3 business days to schedule an
      on-boarding meeting.</strong
    >
  </li>
  <li>
    <strong>Please have answers to the questions below, before your meeting with the IDIM team.</strong>
    <ul>
      <li>What is your estimated volume of initial users?</li>
      <li>Do you anticipate your volume of users will grow over the next three years?</li>
      <li>When do you need access to the production environment by?</li>
      <li>When will your end users need access to the production environment?</li>
    </ul>
    <div style="display: none">&nbsp;</div>
  </li>
</ol>

   <p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>

"
`;

exports[`Email template snapshots Should return the expected email for CREATE_INTEGRATION_SUBMITTED w/ GitHub 1`] = `"[DEV] Pathfinder SSO request submitted & additional important information (email 1 of 2)"`;

exports[`Email template snapshots Should return the expected email for CREATE_INTEGRATION_SUBMITTED w/ GitHub 2`] = `
"<h3>Hello Pathfinder SSO friend,</h3>
<p>Your Pathfinder SSO request ID 1 is successfully submitted.</p>
<p>Below is a summary of your integration request details:</p>
<strong>Project name: </strong>test<br />
<strong>Primary End Users: </strong>None Selected<br />
<strong>Identity Providers: </strong>IDIR - MFA<br />
<strong>Environments: </strong>Development, Test, Production<br />
<strong>Accountable person(s): </strong>Test User<br />
<strong>Submitted by: </strong>SSO Admin<br />
<strong>URIs:</strong>
<ul>
  <li>
    Development:
    <ul>
      <li>https://b</li>
    </ul>
  </li>
  <li>
    Test:
    <ul>
      <li>https://test</li>
    </ul>
  </li>
  <li>
    Production:
    <ul>
      <li>https://a</li>
    </ul>
  </li>
</ul>
 <p>
  <strong>The expected processing time is 5 minutes</strong><br />
  Once the request is approved, you will receive another email that your JSON Client Installation is ready. If you are
  not the requester, this email serves only to notify you of the request status.
</p>
   <table border="0" width="100%" cellpadding="0" cellspacing="0">
  <tr>
    <td
      style="background: none; border-bottom: 1px solid #d7dfe3; height: 1px; width: 100%; margin: 0px 0px 0px 0px"
    ></td>
  </tr>
</table>
<br />
 <strong>Next Steps for your integration with GitHub:</strong>
<p>
  As you've requested an integration with GitHub, any production integration request requires you to obtain an exemption
  to the IM/IT standards.
  <a
    href="https://www2.gov.bc.ca/gov/content/governments/services-for-government/policies-procedures/im-it-standards/im-it-standards-faqs"
    title="IM/IT Standards Frequently Asked Questions"
    target="_blank"
    rel="noreferrer"
    >IM/IT Standards Frequently Asked Questions</a
  >
</p>
<ol>
  <li>
    Please proceed to complete this form:
    <a
      href="https://www2.gov.bc.ca/gov/content/governments/services-for-government/policies-procedures/im-it-standards/exemptions"
      title="IIM/IT Standards Exemptions"
      target="_blank"
      rel="noreferrer"
      >IIM/IT Standards Exemptions</a
    >
  </li>
  <li>
    Once the exemption has been granted, please email us with a copy of it and we will happily set you production
    integration with GitHub
  </li>
</ol>
<div style="display: none">&nbsp;</div>
   <p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>

"
`;

exports[`Email template snapshots Should return the expected email for CREATE_INTEGRATION_SUBMITTED w/ Social 1`] = `"[DEV] Pathfinder SSO request submitted & additional important information (email 1 of 2)"`;

exports[`Email template snapshots Should return the expected email for CREATE_INTEGRATION_SUBMITTED w/ Social 2`] = `
"<h3>Hello Pathfinder SSO friend,</h3>
<p>Your Pathfinder SSO request ID 1 is successfully submitted.</p>
<p>Below is a summary of your integration request details:</p>
<strong>Project name: </strong>test<br />
<strong>Primary End Users: </strong>None Selected<br />
<strong>Identity Providers: </strong>Social<br />
<strong>Environments: </strong>Development, Test, Production<br />
<strong>Accountable person(s): </strong>Test User<br />
<strong>Submitted by: </strong>SSO Admin<br />
<strong>URIs:</strong>
<ul>
  <li>
    Development:
    <ul>
      <li>https://b</li>
    </ul>
  </li>
  <li>
    Test:
    <ul>
      <li>https://test</li>
    </ul>
  </li>
  <li>
    Production:
    <ul>
      <li>https://a</li>
    </ul>
  </li>
</ul>
 <p>
  <strong>The expected processing time is 5 minutes</strong><br />
  Once the request is approved, you will receive another email that your JSON Client Installation is ready. If you are
  not the requester, this email serves only to notify you of the request status.
</p>

<table border="0" width="100%" cellpadding="0" cellspacing="0">
  <tr>
    <td
      style="background: none; border-bottom: 1px solid #d7dfe3; height: 1px; width: 100%; margin: 0px 0px 0px 0px"
    ></td>
  </tr>
</table>
<br />
 <strong>Next Steps for your integration with Social Login:</strong>
<p>
  As you’ve requested integration with Social Login, any production integration request requires you work with the CDT
  Delivery team.
</p>

<p>
  On a best effort basis, the Delivery team will reach out to you within 2-3 business days to schedule an on-boarding
  meeting.
</p>

<p>
  <strong>Please have the following before your meeting with the Delivery team.</strong>
</p>

<ol>
  <li>
    Answers to the following:
    <ul>
      <li>Details of your use case(s)</li>
      <li>Has your Ministry MISO and MPO approved your use of social login?</li>
      <li>When do you need access to the production environment by?</li>
      <li>When will your end users need access to the production environment?</li>
    </ul>
  </li>
  <li>Complete the attached Self-Assessment.</li>
</ol>

<div style="display: none">&nbsp;</div>
   <p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>

"
`;

exports[`Email template snapshots Should return the expected email for CREATE_TEAM_API_ACCOUNT_APPROVED 1`] = `"[DEV] SSO CSS API Account created (email 2 of 2)"`;

exports[`Email template snapshots Should return the expected email for CREATE_TEAM_API_ACCOUNT_APPROVED 2`] = `
"<h1>Your Pathfinder SSO CSS API Account has been created.</h1>
<p>
  <strong>Team Name: </strong>Test Team<br />
  <strong>Submitted by: </strong>Test User<br />
  <strong>Integrations:</strong>
</p>
<ul>
  <li>1 - test</li>
</ul>
<p>
  Please Log in to your dashboard to access the CSS API Account. If you are not the requester, this email serves only to
  notify you of the request status.
</p>

<p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>
"
`;

exports[`Email template snapshots Should return the expected email for CREATE_TEAM_API_ACCOUNT_SUBMITTED 1`] = `"[DEV] SSO CSS API Account requested (email 1 of 2)"`;

exports[`Email template snapshots Should return the expected email for CREATE_TEAM_API_ACCOUNT_SUBMITTED 2`] = `
"<h1>Your Pathfinder SSO CSS API Account has been requested.</h1>
<p>
  <strong>Team Name: </strong>Test Team<br />
  <strong>Submitted by: </strong>Test User<br />
  <strong>Integrations:</strong>
</p>
<ul>
  <li>1 - test</li>
</ul>
<p>
  Please Log in to your dashboard to access the CSS API Account. If you are not the requester, this email serves only to
  notify you of the request status.
</p>

<p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>
"
`;

exports[`Email template snapshots Should return the expected email for DELETE_INACTIVE_IDIR_USER 1`] = `"[DEV] In-active IDIR User Removed"`;

exports[`Email template snapshots Should return the expected email for DELETE_INACTIVE_IDIR_USER 2`] = `
"<h3>Dear Pathfinder SSO friend,</h3>
<p>
  The IDIR user with the idir username test-user has an inactive guid in our system. They have been removed from
  client test-client in the dev environment and associated roles test-role
</p>
<p>
  This user was also a Team Admin for your integration, to help ensure a transition to the appropriate admin, please
  contact the Pathfinder SSO team,
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
  with the name of the new admin so we configure for you. Once the Admin is set up, you can remove the Pathfinder SSO
  team as an admin.
</p>
 <p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>

"
`;

exports[`Email template snapshots Should return the expected email for DELETE_INTEGRATION_SUBMITTED 1`] = `"[DEV] Pathfinder SSO integration ID 1 deleted"`;

exports[`Email template snapshots Should return the expected email for DELETE_INTEGRATION_SUBMITTED 2`] = `
"<h3>Hello Pathfinder SSO friend,</h3>
<p>Your Pathfinder SSO request ID 1 is deleted.</p>
<p>Below is a summary of your deleted integration:</p>
<strong>Project name: </strong>test<br />
<strong>Primary End Users: </strong>None Selected<br />
<strong>Identity Providers: </strong>IDIR - MFA<br />
<strong>Environments: </strong>Development<br />
<strong>Accountable person(s): </strong>Test User<br />
<strong>Submitted by: </strong>SSO Admin<br />
<strong>URIs:</strong>
<ul>
  <li>
    Development:
    <ul>
      <li>https://b</li>
    </ul>
  </li>
</ul>
 <p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>

"
`;

exports[`Email template snapshots Should return the expected email for DISABLE_BCSC_IDP 1`] = `"[DEV] BC Services Card integration disabled for Client (test)"`;

exports[`Email template snapshots Should return the expected email for DISABLE_BCSC_IDP 2`] = `
"<h3>Hello Team,</h3>
<p>
  We would like to inform you that the BCSC IDP has been disabled for the below integration in production environment.
</p>
<strong>SSO Integration ID: </strong>1<br />
<strong>Client Name: </strong>test<br />
<strong>Submitted by: </strong>SSO Admin<br />
<strong>Privacy Zone: </strong>zone<br />
<strong>Attributes: </strong>given_name,given_names<br />
 <p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>

"
`;

exports[`Email template snapshots Should return the expected email for PROD_APPROVED w/ BC Services Card 1`] = `"[DEV] BC Services Card Request ID 1 approved and being processed (email 1 of 2)"`;

exports[`Email template snapshots Should return the expected email for PROD_APPROVED w/ BC Services Card 2`] = `
"<h3>Hello Pathfinder SSO friend,</h3>
<p>
  Your Pathfinder SSO production environment for BC Services Card <strong>integration request ID 1</strong> has
  been approved.
</p>
<p>Below is a summary of your integration request details:</p>
<strong>Project name: </strong>test<br />
<strong>Primary End Users: </strong>None Selected<br />
<strong>Identity Providers: </strong>BC Services Card<br />

<strong>Privacy Zone:</strong> zone <br />
<strong>Environments: </strong>Development<br />
<strong>Accountable person(s): </strong>Test User<br />
<strong>Submitted by: </strong>SSO Admin<br />
<strong>URIs:</strong>
<ul>
  <li>
    Development:
    <ul>
      <li>https://b</li>
    </ul>
  </li>
</ul>
 <p>
  <strong>The expected processing time is 5 minutes</strong><br />
  Once the request is approved, you will receive another email that your JSON Client Installation is ready. If you are
  not the requester, this email serves only to notify you of the request status.
</p>
 <p>
  Please join the
  <a
    href="https://digital.gov.bc.ca/sso-notifications/"
    title="SSO Updates Mailing list"
    target="_blank"
    rel="noreferrer"
    >SSO Updates Mailing list</a
  >
  within the DevOps Platform Services Communications to receive important updates on the service and any outages.
</p>
 <p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>

"
`;

exports[`Email template snapshots Should return the expected email for PROD_APPROVED w/ BCeID 1`] = `"[DEV] BCeID Request ID 1 approved and being processed (email 1 of 2)"`;

exports[`Email template snapshots Should return the expected email for PROD_APPROVED w/ BCeID 2`] = `
"<h3>Hello Pathfinder SSO friend,</h3>
<p>
  Your Pathfinder SSO production environment for BCeID <strong>integration request ID 1</strong> has
  been approved.
</p>
<p>Below is a summary of your integration request details:</p>
<strong>Project name: </strong>test<br />
<strong>Primary End Users: </strong>None Selected<br />
<strong>Identity Providers: </strong>IDIR - MFA<br />
<strong>Environments: </strong>Development<br />
<strong>Accountable person(s): </strong>Test User<br />
<strong>Submitted by: </strong>SSO Admin<br />
<strong>URIs:</strong>
<ul>
  <li>
    Development:
    <ul>
      <li>https://b</li>
    </ul>
  </li>
</ul>
 <p>
  <strong>The expected processing time is 5 minutes</strong><br />
  Once the request is approved, you will receive another email that your JSON Client Installation is ready. If you are
  not the requester, this email serves only to notify you of the request status.
</p>
 <p>
  Please join the
  <a
    href="https://digital.gov.bc.ca/sso-notifications/"
    title="SSO Updates Mailing list"
    target="_blank"
    rel="noreferrer"
    >SSO Updates Mailing list</a
  >
  within the DevOps Platform Services Communications to receive important updates on the service and any outages.
</p>
 <p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>

"
`;

exports[`Email template snapshots Should return the expected email for PROD_APPROVED w/ GitHub 1`] = `"[DEV] GitHub Request ID 1 approved and being processed (email 1 of 2)"`;

exports[`Email template snapshots Should return the expected email for PROD_APPROVED w/ GitHub 2`] = `
"<h3>Hello Pathfinder SSO friend,</h3>
<p>
  Your Pathfinder SSO production environment for GitHub <strong>integration request ID 1</strong> has
  been approved.
</p>
<p>Below is a summary of your integration request details:</p>
<strong>Project name: </strong>test<br />
<strong>Primary End Users: </strong>None Selected<br />
<strong>Identity Providers: </strong>IDIR - MFA<br />
<strong>Environments: </strong>Development<br />
<strong>Accountable person(s): </strong>Test User<br />
<strong>Submitted by: </strong>SSO Admin<br />
<strong>URIs:</strong>
<ul>
  <li>
    Development:
    <ul>
      <li>https://b</li>
    </ul>
  </li>
</ul>
 <p>
  <strong>The expected processing time is 5 minutes</strong><br />
  Once the request is approved, you will receive another email that your JSON Client Installation is ready. If you are
  not the requester, this email serves only to notify you of the request status.
</p>
 <p>
  Please join the
  <a
    href="https://digital.gov.bc.ca/sso-notifications/"
    title="SSO Updates Mailing list"
    target="_blank"
    rel="noreferrer"
    >SSO Updates Mailing list</a
  >
  within the DevOps Platform Services Communications to receive important updates on the service and any outages.
</p>
 <p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>

"
`;

exports[`Email template snapshots Should return the expected email for REQUEST_LIMIT_EXCEEDED 1`] = `"[DEV] Pathfinder SSO request limit reached"`;

exports[`Email template snapshots Should return the expected email for REQUEST_LIMIT_EXCEEDED 2`] = `
"<h1>Request Limit Exceeded</h1>
<p>Pathfinder SSO user <strong>test user (#1)</strong> has exceeded their daily limit</p>
"
`;

exports[`Email template snapshots Should return the expected email for TEAM_DELETED 1`] = `"[DEV] Team testteam has been removed by a team admin"`;

exports[`Email template snapshots Should return the expected email for TEAM_DELETED 2`] = `
"<p>testteam has been removed as well as your membership from the team.</p>
<p>
  To view your integrations please
  <a href="http://localhost:3000/my-dashboard/integrations" title="Log in" target="_blank" rel="noreferrer">Log in</a>.
</p>
<p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>
"
`;

exports[`Email template snapshots Should return the expected email for TEAM_INVITATION admins 1`] = `"[DEV] Invitation to join testteam"`;

exports[`Email template snapshots Should return the expected email for TEAM_INVITATION admins 2`] = `
"<p>Hello Pathfinder SSO friend,</p>
<p>
  You are invited to join <strong>testteam (#1)</strong>. You have been invited as a
  <strong>Team Admin</strong> which gives you the
  <strong>privilege to manage</strong> the integration.
</p>
<p>
  Please follow this <a href="http://localhost:8080/app/teams/verify?token=https://mysite.com/invitation-link">link</a> to view your invitation in the
  dashboard. The link will expire in <strong>2 business days.</strong> If the link has expired,
  <a href="https://stackoverflow.developer.gov.bc.ca/questions/1231">please see this helpful tip</a>.
</p>
<p>
  If you think you have received this invite by accident, or have any other questions, please contact the Pathfinder SSO
  team by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    rocketchat
  </a>
  or reply to this email.
</p>

<p>Thank you,<br />Pathfinder SSO Team</p>
"
`;

exports[`Email template snapshots Should return the expected email for TEAM_INVITATION members 1`] = `"[DEV] Invitation to join testteam"`;

exports[`Email template snapshots Should return the expected email for TEAM_INVITATION members 2`] = `
"<p>Hello Pathfinder SSO friend,</p>
<p>
  You are invited to join <strong>testteam (#1)</strong>. You have been invited as a
  <strong>Team Member</strong> which gives you the
  <strong>privilege to view</strong> the integration.
</p>
<p>
  Please follow this <a href="http://localhost:8080/app/teams/verify?token=https://mysite.com/invitation-link">link</a> to view your invitation in the
  dashboard. The link will expire in <strong>2 business days.</strong> If the link has expired,
  <a href="https://stackoverflow.developer.gov.bc.ca/questions/1231">please see this helpful tip</a>.
</p>
<p>
  If you think you have received this invite by accident, or have any other questions, please contact the Pathfinder SSO
  team by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    rocketchat
  </a>
  or reply to this email.
</p>

<p>Thank you,<br />Pathfinder SSO Team</p>
"
`;

exports[`Email template snapshots Should return the expected email for TEAM_MEMBER_DELETED_ADMINS 1`] = `"[DEV] Team Admin has modified testteam"`;

exports[`Email template snapshots Should return the expected email for TEAM_MEMBER_DELETED_ADMINS 2`] = `
"<p>A team member <strong>()</strong> has been removed from <strong>testteam</strong>.</p>
<p>
  To view your integrations please
  <a href="http://localhost:3000/my-dashboard/integrations" title="Log in" target="_blank" rel="noreferrer">Log in</a>.
</p>
<p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>
"
`;

exports[`Email template snapshots Should return the expected email for TEAM_MEMBER_DELETED_USER_REMOVED 1`] = `"[DEV] Team Admin has modified testteam"`;

exports[`Email template snapshots Should return the expected email for TEAM_MEMBER_DELETED_USER_REMOVED 2`] = `
"<p>A team admin from <strong>testteam</strong> has removed your membership.</p>
<p>
  To view your integrations please
  <a href="http://localhost:3000/my-dashboard/integrations" title="Log in" target="_blank" rel="noreferrer">Log in</a>.
</p>
<p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>
"
`;

exports[`Email template snapshots Should return the expected email for UPDATE_INTEGRATION_APPLIED 1`] = `"[DEV] Pathfinder SSO change request approved and can be downloaded (email 2 of 2)"`;

exports[`Email template snapshots Should return the expected email for UPDATE_INTEGRATION_APPLIED 2`] = `
"<h3>Hello Pathfinder SSO friend,</h3>
<p>
  Your Pathfinder SSO change for integration ID 1 is approved. </p>

<h4>Changes made:</h4>
<blockquote><strong>Project Name:</strong> project-1 => project-2<br/></blockquote>
<hr />

<h4>Final details summary:</h4>
<blockquote><strong>Project name: </strong>test<br />
<strong>Primary End Users: </strong>None Selected<br />
<strong>Identity Providers: </strong>IDIR - MFA<br />
<strong>Environments: </strong>Development<br />
<strong>Accountable person(s): </strong>Test User<br />
<strong>Submitted by: </strong>SSO Admin<br />
<strong>URIs:</strong>
<ul>
  <li>
    Development:
    <ul>
      <li>https://b</li>
    </ul>
  </li>
</ul>
</blockquote>
<hr />
  <p>
  Please <a href="http://localhost:3000/my-dashboard/integrations" title="Log in" target="_blank" rel="noreferrer">Log in</a>
  to your dashboard to access JSON Client Installation File. If you are not the requester, this email serves only to
  notify you of the request status.
</p>
 <p>
  Please join the
  <a
    href="https://digital.gov.bc.ca/sso-notifications/"
    title="SSO Updates Mailing list"
    target="_blank"
    rel="noreferrer"
    >SSO Updates Mailing list</a
  >
  within the DevOps Platform Services Communications to receive important updates on the service and any outages.
</p>

 <p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>

"
`;

exports[`Email template snapshots Should return the expected email for UPDATE_INTEGRATION_SUBMITTED 1`] = `"[DEV] Pathfinder SSO change request submitted (email 1 of 2)"`;

exports[`Email template snapshots Should return the expected email for UPDATE_INTEGRATION_SUBMITTED 2`] = `
"<h3>Hello Pathfinder SSO friend,</h3>
<p>Your Pathfinder SSO change request for integration ID 1 is successfully submitted.</p>

<h4>Changes made:</h4>
<blockquote><strong>Project Name:</strong> project-1 => project-2<br/></blockquote>
<hr />

<h4>Final details summary:</h4>
<blockquote><strong>Project name: </strong>test<br />
<strong>Primary End Users: </strong>None Selected<br />
<strong>Identity Providers: </strong>IDIR - MFA<br />
<strong>Environments: </strong>Development, Test<br />
<strong>Accountable person(s): </strong>Test User<br />
<strong>Submitted by: </strong>SSO Admin<br />
<strong>URIs:</strong>
<ul>
  <li>
    Development:
    <ul>
      <li>https://b</li>
    </ul>
  </li>
  <li>
    Test:
    <ul>
      <li>https://test</li>
    </ul>
  </li>
</ul>
</blockquote>
<hr />
<p>
  <strong>The expected processing time is 5 minutes</strong><br />
  Once the request is approved, you will receive another email that your JSON Client Installation is ready. If you are
  not the requester, this email serves only to notify you of the request status.
</p>
    <p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>

"
`;

exports[`Email template snapshots Should return the expected email for UPDATE_INTEGRATION_SUBMITTED w/ BCeID & GitHub 1`] = `"[DEV] Pathfinder SSO change request submitted (email 1 of 2)"`;

exports[`Email template snapshots Should return the expected email for UPDATE_INTEGRATION_SUBMITTED w/ BCeID & GitHub 2`] = `
"<h3>Hello Pathfinder SSO friend,</h3>
<p>Your Pathfinder SSO change request for integration ID 1 is successfully submitted.</p>

<h4>Changes made:</h4>
<blockquote><strong>Project Name:</strong> project-1 => project-2<br/></blockquote>
<hr />

<h4>Final details summary:</h4>
<blockquote><strong>Project name: </strong>test<br />
<strong>Primary End Users: </strong>None Selected<br />
<strong>Identity Providers: </strong>IDIR - MFA<br />
<strong>Environments: </strong>Development, Test, Production<br />
<strong>Accountable person(s): </strong>Test User<br />
<strong>Submitted by: </strong>SSO Admin<br />
<strong>URIs:</strong>
<ul>
  <li>
    Development:
    <ul>
      <li>https://b</li>
    </ul>
  </li>
  <li>
    Test:
    <ul>
      <li>https://test</li>
    </ul>
  </li>
  <li>
    Production:
    <ul>
      <li>https://a</li>
    </ul>
  </li>
</ul>
</blockquote>
<hr />
<p>
  <strong>The expected processing time is 5 minutes</strong><br />
  Once the request is approved, you will receive another email that your JSON Client Installation is ready. If you are
  not the requester, this email serves only to notify you of the request status.
</p>
  <strong>Next Steps for your integration with BCeID:</strong>
<p>
  As you've requested an integration with BCeID, any production integration request requires you to work with the
  Identity and Information Management (IDIM) team.
</p>
<ol>
  <li>
    <strong
      >On a best effort basis, the BCeID team will endeavour to reach out to you within 2-3 business days to schedule an
      on-boarding meeting.</strong
    >
  </li>
  <li>
    <strong>Please have answers to the questions below, before your meeting with the IDIM team.</strong>
    <ul>
      <li>What is your estimated volume of initial users?</li>
      <li>Do you anticipate your volume of users will grow over the next three years?</li>
      <li>When do you need access to the production environment by?</li>
      <li>When will your end users need access to the production environment?</li>
    </ul>
    <div style="display: none">&nbsp;</div>
  </li>
</ol>
   <table border="0" width="100%" cellpadding="0" cellspacing="0">
  <tr>
    <td
      style="background: none; border-bottom: 1px solid #d7dfe3; height: 1px; width: 100%; margin: 0px 0px 0px 0px"
    ></td>
  </tr>
</table>
<br />
 <strong>Next Steps for your integration with GitHub:</strong>
<p>
  As you've requested an integration with GitHub, any production integration request requires you to obtain an exemption
  to the IM/IT standards.
  <a
    href="https://www2.gov.bc.ca/gov/content/governments/services-for-government/policies-procedures/im-it-standards/im-it-standards-faqs"
    title="IM/IT Standards Frequently Asked Questions"
    target="_blank"
    rel="noreferrer"
    >IM/IT Standards Frequently Asked Questions</a
  >
</p>
<ol>
  <li>
    Please proceed to complete this form:
    <a
      href="https://www2.gov.bc.ca/gov/content/governments/services-for-government/policies-procedures/im-it-standards/exemptions"
      title="IIM/IT Standards Exemptions"
      target="_blank"
      rel="noreferrer"
      >IIM/IT Standards Exemptions</a
    >
  </li>
  <li>
    Once the exemption has been granted, please email us with a copy of it and we will happily set you production
    integration with GitHub
  </li>
</ol>
<div style="display: none">&nbsp;</div>
   <p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>

"
`;

exports[`Email template snapshots Should return the expected email for UPDATE_INTEGRATION_SUBMITTED w/ BCeID 1`] = `"[DEV] Pathfinder SSO change request submitted (email 1 of 2)"`;

exports[`Email template snapshots Should return the expected email for UPDATE_INTEGRATION_SUBMITTED w/ BCeID 2`] = `
"<h3>Hello Pathfinder SSO friend,</h3>
<p>Your Pathfinder SSO change request for integration ID 1 is successfully submitted.</p>

<h4>Changes made:</h4>
<blockquote><strong>Project Name:</strong> project-1 => project-2<br/></blockquote>
<hr />

<h4>Final details summary:</h4>
<blockquote><strong>Project name: </strong>test<br />
<strong>Primary End Users: </strong>None Selected<br />
<strong>Identity Providers: </strong>IDIR - MFA<br />
<strong>Environments: </strong>Development, Test, Production<br />
<strong>Accountable person(s): </strong>Test User<br />
<strong>Submitted by: </strong>SSO Admin<br />
<strong>URIs:</strong>
<ul>
  <li>
    Development:
    <ul>
      <li>https://b</li>
    </ul>
  </li>
  <li>
    Test:
    <ul>
      <li>https://test</li>
    </ul>
  </li>
  <li>
    Production:
    <ul>
      <li>https://a</li>
    </ul>
  </li>
</ul>
</blockquote>
<hr />
<p>
  <strong>The expected processing time is 5 minutes</strong><br />
  Once the request is approved, you will receive another email that your JSON Client Installation is ready. If you are
  not the requester, this email serves only to notify you of the request status.
</p>
  <strong>Next Steps for your integration with BCeID:</strong>
<p>
  As you've requested an integration with BCeID, any production integration request requires you to work with the
  Identity and Information Management (IDIM) team.
</p>
<ol>
  <li>
    <strong
      >On a best effort basis, the BCeID team will endeavour to reach out to you within 2-3 business days to schedule an
      on-boarding meeting.</strong
    >
  </li>
  <li>
    <strong>Please have answers to the questions below, before your meeting with the IDIM team.</strong>
    <ul>
      <li>What is your estimated volume of initial users?</li>
      <li>Do you anticipate your volume of users will grow over the next three years?</li>
      <li>When do you need access to the production environment by?</li>
      <li>When will your end users need access to the production environment?</li>
    </ul>
    <div style="display: none">&nbsp;</div>
  </li>
</ol>
    <p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>

"
`;

exports[`Email template snapshots Should return the expected email for UPDATE_INTEGRATION_SUBMITTED w/ GitHub 1`] = `"[DEV] Pathfinder SSO change request submitted (email 1 of 2)"`;

exports[`Email template snapshots Should return the expected email for UPDATE_INTEGRATION_SUBMITTED w/ GitHub 2`] = `
"<h3>Hello Pathfinder SSO friend,</h3>
<p>Your Pathfinder SSO change request for integration ID 1 is successfully submitted.</p>

<h4>Changes made:</h4>
<blockquote><strong>Project Name:</strong> project-1 => project-2<br/></blockquote>
<hr />

<h4>Final details summary:</h4>
<blockquote><strong>Project name: </strong>test<br />
<strong>Primary End Users: </strong>None Selected<br />
<strong>Identity Providers: </strong>IDIR - MFA<br />
<strong>Environments: </strong>Development, Test, Production<br />
<strong>Accountable person(s): </strong>Test User<br />
<strong>Submitted by: </strong>SSO Admin<br />
<strong>URIs:</strong>
<ul>
  <li>
    Development:
    <ul>
      <li>https://b</li>
    </ul>
  </li>
  <li>
    Test:
    <ul>
      <li>https://test</li>
    </ul>
  </li>
  <li>
    Production:
    <ul>
      <li>https://a</li>
    </ul>
  </li>
</ul>
</blockquote>
<hr />
<p>
  <strong>The expected processing time is 5 minutes</strong><br />
  Once the request is approved, you will receive another email that your JSON Client Installation is ready. If you are
  not the requester, this email serves only to notify you of the request status.
</p>
   <table border="0" width="100%" cellpadding="0" cellspacing="0">
  <tr>
    <td
      style="background: none; border-bottom: 1px solid #d7dfe3; height: 1px; width: 100%; margin: 0px 0px 0px 0px"
    ></td>
  </tr>
</table>
<br />
 <strong>Next Steps for your integration with GitHub:</strong>
<p>
  As you've requested an integration with GitHub, any production integration request requires you to obtain an exemption
  to the IM/IT standards.
  <a
    href="https://www2.gov.bc.ca/gov/content/governments/services-for-government/policies-procedures/im-it-standards/im-it-standards-faqs"
    title="IM/IT Standards Frequently Asked Questions"
    target="_blank"
    rel="noreferrer"
    >IM/IT Standards Frequently Asked Questions</a
  >
</p>
<ol>
  <li>
    Please proceed to complete this form:
    <a
      href="https://www2.gov.bc.ca/gov/content/governments/services-for-government/policies-procedures/im-it-standards/exemptions"
      title="IIM/IT Standards Exemptions"
      target="_blank"
      rel="noreferrer"
      >IIM/IT Standards Exemptions</a
    >
  </li>
  <li>
    Once the exemption has been granted, please email us with a copy of it and we will happily set you production
    integration with GitHub
  </li>
</ol>
<div style="display: none">&nbsp;</div>
   <p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>

"
`;

exports[`Email template snapshots Should return the expected email for UPDATE_INTEGRATION_SUBMITTED w/ unapproved BC Services Card 1`] = `"[DEV] Pathfinder SSO change request submitted (email 1 of 2)"`;

exports[`Email template snapshots Should return the expected email for UPDATE_INTEGRATION_SUBMITTED w/ unapproved BC Services Card 2`] = `
"<h3>Hello Pathfinder SSO friend,</h3>
<p>Your Pathfinder SSO change request for integration ID 1 is successfully submitted.</p>


<h4>Final details summary:</h4>
<blockquote><strong>Project name: </strong>test<br />
<strong>Primary End Users: </strong>None Selected<br />
<strong>Identity Providers: </strong>BC Services Card<br />

<strong>Privacy Zone:</strong> zone <br />
<strong>Environments: </strong>Development, Test, Production<br />
<strong>Accountable person(s): </strong>Test User<br />
<strong>Submitted by: </strong>SSO Admin<br />
<strong>URIs:</strong>
<ul>
  <li>
    Development:
    <ul>
      <li>https://b</li>
    </ul>
  </li>
  <li>
    Test:
    <ul>
      <li>https://test</li>
    </ul>
  </li>
  <li>
    Production:
    <ul>
      <li>https://a</li>
    </ul>
  </li>
</ul>
</blockquote>
<hr />
<p>
  <strong>The expected processing time is 5 minutes</strong><br />
  Once the request is approved, you will receive another email that your JSON Client Installation is ready. If you are
  not the requester, this email serves only to notify you of the request status.
</p>
   <table border="0" width="100%" cellpadding="0" cellspacing="0">
  <tr>
    <td
      style="background: none; border-bottom: 1px solid #d7dfe3; height: 1px; width: 100%; margin: 0px 0px 0px 0px"
    ></td>
  </tr>
</table>
<br />
 <strong>Next Steps for your integration with BC Services Card:</strong>
<p>
  As you've requested an integration with BC Services Card, any production integration request requires you to work with
  the Identity and Information Management (IDIM) team.
</p>
<ol>
  <li>
    <strong
      >On a best effort basis, the BC Services Card team will endeavour to reach out to you within 2-3 business days to
      schedule an on-boarding meeting.</strong
    >
  </li>
  <li>
    <strong>Please have answers to the questions below, before your meeting with the IDIM team.</strong>
    <ul>
      <li>What is your estimated volume of initial users?</li>
      <li>Do you anticipate your volume of users will grow over the next three years?</li>
      <li>When do you need access to the production environment by?</li>
      <li>When will your end users need access to the production environment?</li>
    </ul>
    <div style="display: none">&nbsp;</div>
  </li>
</ol>
   <p>
  If you have any questions, please contact us by
  <a href="https://chat.developer.gov.bc.ca/channel/sso" target="_blank" title="Rocket Chat" rel="noreferrer">
    Rocket.Chat
  </a>
  or email at:
  <a href="mailto:bcgov.sso@gov.bc.ca" title="Pathfinder SSO" target="_blank" rel="noreferrer"> bcgov.sso@gov.bc.ca </a>
</p>
<p>Thank you.<br />Pathfinder SSO Team</p>

"
`;
